syntax = "proto3";
package cosmos.epoching.v1;

import "gogoproto/gogo.proto";
import "cosmos/epoching/v1/params.proto";

option go_package = "cosmossdk.io/x/epoching/types";

// GenesisState defines the epoching module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
}
